--- a/.github/workflows/lighthouse-daily-run.yml
+++ b/.github/workflows/lighthouse-daily-run.yml
@@ -2,8 +2,8 @@ name: Lighthouse CI
 on:
   workflow_dispatch:
   schedule:
-    # Runs "At 11:00 on every day-of-week from Monday through Friday"
-    - cron: '0 11 * * 1-5'
+    # Runs every hour
+    - cron: '0 * * * *'
 
 jobs:
   lighthouse:
